wrapping fix and color theme adjustment

--- a/packages/colorbox/src/maps/gruv.css
+++ b/packages/colorbox/src/maps/gruv.css
@@ -7,8 +7,8 @@ html.light {
   --frame: var(--gb-light3);
   --frame-low: var(--gb-light2);
   --surface-low: var(--gb-light0);
-  --surface: color-mix(in srgb, var(--gb-light0), var(--gb-light0-hard));
-  --surface-high: var(--gb-light0-hard);
+  --surface: var(--gb-light0-soft);
+  --surface-high: var(--gb-light1);
 
   --highlight: color-mix(in lch, var(--gb-faded-yellow) 40%, transparent);
   --selection: color-mix(in lch, var(--gb-neutral-orange) 40%, transparent);
@@ -23,12 +23,12 @@ html.light {
 
   --code-foreground: var(--gb-dark0);
   --code-background: var(--gb-light0);
-  --code-token-constant: var(--gb-neutral-purple);
+  --code-token-constant: var(--gb-neutral-blue);
   --code-token-string: var(--gb-neutral-aqua);
   --code-token-comment: var(--gb-light4);
   --code-token-keyword: var(--gb-neutral-red);
   --code-token-parameter: var(--gb-dark2);
-  --code-token-function: var(--gb-neutral-blue);
+  --code-token-function: var(--gb-neutral-orange);
   --code-token-string-expression: var(--gb-neutral-green);
   --code-token-punctuation: var(--gb-dark3);
   --code-token-link: var(--gb-dark4);
@@ -58,12 +58,12 @@ html.light {
 
   --code-foreground: var(--gb-light1);
   --code-background: var(--gb-dark0);
-  --code-token-constant: var(--gb-bright-purple);
+  --code-token-constant: var(--gb-bright-aqua);
   --code-token-string: var(--gb-bright-aqua);
   --code-token-comment: var(--gb-gray-245);
   --code-token-keyword: var(--gb-bright-red);
   --code-token-parameter: var(--gb-light1);
-  --code-token-function: var(--gb-bright-aqua);
+  --code-token-function: var(--gb-bright-yellow);
   --code-token-string-expression: var(--gb-bright-green);
   --code-token-punctuation: var(--gb-light3);
   --code-token-link: var(--gb-light4);
@@ -94,12 +94,12 @@ html.light {
 
     --code-foreground: var(--gb-light1);
     --code-background: var(--gb-dark0);
-    --code-token-constant: var(--gb-bright-purple);
+    --code-token-constant: var(--gb-bright-aqua);
     --code-token-string: var(--gb-bright-aqua);
     --code-token-comment: var(--gb-gray-245);
     --code-token-keyword: var(--gb-bright-red);
     --code-token-parameter: var(--gb-light1);
-    --code-token-function: var(--gb-bright-aqua);
+    --code-token-function: var(--gb-bright-yellow);
     --code-token-string-expression: var(--gb-bright-green);
     --code-token-punctuation: var(--gb-light3);
     --code-token-link: var(--gb-light4);
